feat: smarter smoke and VM warnings

--- a/configs/vm.example.yaml
+++ b/configs/vm.example.yaml
@@ -12,6 +12,7 @@ vm:
   ssh_key: ""
   password: "change-me"
   allow_password_ssh: false
+  ssh_port: 22
   ip_address: "192.168.1.10"
   netmask: "255.255.255.0"
   gateway: "192.168.1.1"
