--- a/configs/vm.example.yaml
+++ b/configs/vm.example.yaml
@@ -12,7 +12,7 @@ vm:
       version: "24.04"
     # talos:
     #   version: "v1.12.0"
-    #   schematic_id: ""
+    #   schematic_id: "REQUIRED: image factory schematic id for vmware (e.g. with vmtoolsd)"
   username: "sysadmin"
   ssh_key_path: "~/.ssh/id_ed25519.pub"
   ssh_key: ""
